--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
                 </div>
             </form>
         </section>
+        <footer>
+            <p>&copy; 2020 FCC Landing Page</p>
+            <p>ianbrdeguzman</p>
+        </footer>
     </main>
 </body>
 </html>
